@@ -1,8 +1,12 @@
-2024-07-04  Charlie Zender  <zender@uci.edu>
+2024-07-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.7-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha04: Fake Orangina';git push
-	git tag -a 5.2.7-alpha04 -m '';git push --tags
+	git tag -a 5.2.7-alpha04 -m 'ncks chk_map area_a/b dmt lcn';git push --tags
+
+	* Add area_a/b min/max diameter properties and locations to --chk_map output
+
+2024-07-04  Charlie Zender  <zender@uci.edu>
 
 	* CAAS: Obtain weights, indices from nonlinear map-file
 
